[gd_scene load_steps=13 format=3 uid="uid://blnlnk4mk3pei"]

[ext_resource type="Script" path="res://Scripts/storage.gd" id="1_pqgrl"]
[ext_resource type="Texture2D" uid="uid://c65b0gla420lb" path="res://Assets/graphics/backgrounds/storage background.png" id="2_lef4t"]
[ext_resource type="FontFile" uid="uid://d223nojg0mkop" path="res://Assets/fonts/good times rg.otf" id="3_cjt5g"]
[ext_resource type="Texture2D" uid="uid://r7wvlju7fjyl" path="res://Assets/graphics/icons/X mark for back red.png" id="4_bm1sv"]
[ext_resource type="Texture2D" uid="uid://cuj0ridihdkd0" path="res://Assets/graphics/game_elements/pickaxes/normal pickaxe.png" id="5_pgxlv"]
[ext_resource type="Texture2D" uid="uid://ca1d53c4k58au" path="res://Assets/graphics/icons/check mark.png" id="6_7nt82"]
[ext_resource type="Texture2D" uid="uid://ddfqkc2lg21oc" path="res://Assets/graphics/game_elements/pickaxes/golden pickaxe.png" id="7_2jnsx"]
[ext_resource type="Texture2D" uid="uid://wmfiaxibptur" path="res://Assets/graphics/game_elements/pickaxes/iron pickaxe.png" id="8_4tiv3"]
[ext_resource type="Texture2D" uid="uid://ee342l5yjrw8" path="res://Assets/graphics/icons/locked.png" id="8_8lfu7"]
[ext_resource type="Texture2D" uid="uid://7sbgqfg6tev7" path="res://Assets/graphics/game_elements/pickaxes/diamond pickaxe.png" id="9_c3ytv"]
[ext_resource type="Texture2D" uid="uid://colpbiln7bjnx" path="res://Assets/graphics/game_elements/pickaxes/ruby pickaxe.png" id="10_hivuo"]
[ext_resource type="Texture2D" uid="uid://bjp1j2115uc04" path="res://Assets/textures/Stone_01_DIFF.png" id="11_01pdv"]

[node name="Storage" type="Node2D"]
script = ExtResource("1_pqgrl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1919.0
texture = ExtResource("2_lef4t")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
self_modulate = Color(1, 1, 1, 0.831373)
layout_mode = 1
anchors_preset = -1
anchor_top = -8.0
anchor_bottom = 8.0
offset_top = 320.0
offset_right = 1080.0
offset_bottom = 1600.0
color = Color(0, 0, 0, 0.745098)
metadata/_edit_use_anchors_ = true

[node name="StorageText" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_top = 174.0
offset_right = 1080.0
offset_bottom = 295.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 100
text = "STORAGE"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureButton" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 940.0
offset_right = 1040.0
offset_bottom = 100.0
scale = Vector2(1.4, 1.4)
texture_normal = ExtResource("4_bm1sv")
texture_pressed = ExtResource("4_bm1sv")
texture_hover = ExtResource("4_bm1sv")
texture_disabled = ExtResource("4_bm1sv")
texture_focused = ExtResource("4_bm1sv")

[node name="SteelPickaxe" type="TextureButton" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 384.0
offset_right = 197.0
offset_bottom = 517.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("5_pgxlv")
texture_pressed = ExtResource("5_pgxlv")
texture_hover = ExtResource("5_pgxlv")
texture_disabled = ExtResource("5_pgxlv")
texture_focused = ExtResource("5_pgxlv")

[node name="SteelCheck" type="Sprite2D" parent="Control/ColorRect/SteelPickaxe"]
visible = false
position = Vector2(85.3333, 110)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_7nt82")

[node name="GoldenPickaxe" type="TextureButton" parent="Control/ColorRect"]
offset_left = 448.0
offset_top = 384.0
offset_right = 581.0
offset_bottom = 517.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_2jnsx")
texture_pressed = ExtResource("7_2jnsx")
texture_hover = ExtResource("7_2jnsx")
texture_disabled = ExtResource("7_2jnsx")
texture_focused = ExtResource("7_2jnsx")

[node name="GoldenCheck" type="Sprite2D" parent="Control/ColorRect/GoldenPickaxe"]
visible = false
position = Vector2(85.3333, 110)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_7nt82")

[node name="GoldenLocked" type="Sprite2D" parent="Control/ColorRect/GoldenPickaxe"]
visible = false
position = Vector2(85.333, 110)
scale = Vector2(0.444444, 0.444444)
texture = ExtResource("8_8lfu7")

[node name="IronPickaxe" type="TextureButton" parent="Control/ColorRect"]
offset_left = 832.0
offset_top = 384.0
offset_right = 965.0
offset_bottom = 517.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("8_4tiv3")
texture_pressed = ExtResource("8_4tiv3")
texture_hover = ExtResource("8_4tiv3")
texture_disabled = ExtResource("8_4tiv3")
texture_focused = ExtResource("8_4tiv3")

[node name="IronCheck" type="Sprite2D" parent="Control/ColorRect/IronPickaxe"]
visible = false
position = Vector2(85.3333, 110)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_7nt82")

[node name="IronLocked" type="Sprite2D" parent="Control/ColorRect/IronPickaxe"]
visible = false
position = Vector2(85.333, 110)
scale = Vector2(0.444444, 0.444444)
texture = ExtResource("8_8lfu7")

[node name="DiamondPickaxe" type="TextureButton" parent="Control/ColorRect"]
offset_left = 64.0
offset_top = 648.0
offset_right = 197.0
offset_bottom = 781.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("9_c3ytv")
texture_pressed = ExtResource("9_c3ytv")
texture_hover = ExtResource("9_c3ytv")
texture_disabled = ExtResource("9_c3ytv")
texture_focused = ExtResource("9_c3ytv")

[node name="DiamondCheck" type="Sprite2D" parent="Control/ColorRect/DiamondPickaxe"]
visible = false
position = Vector2(85.3333, 110)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_7nt82")

[node name="DiamondLocked" type="Sprite2D" parent="Control/ColorRect/DiamondPickaxe"]
visible = false
position = Vector2(85.333, 110)
scale = Vector2(0.444444, 0.444444)
texture = ExtResource("8_8lfu7")

[node name="RubyPickaxe" type="TextureButton" parent="Control/ColorRect"]
offset_left = 448.0
offset_top = 648.0
offset_right = 581.0
offset_bottom = 781.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("10_hivuo")
texture_pressed = ExtResource("10_hivuo")
texture_hover = ExtResource("10_hivuo")
texture_disabled = ExtResource("10_hivuo")
texture_focused = ExtResource("10_hivuo")

[node name="RubyCheck" type="Sprite2D" parent="Control/ColorRect/RubyPickaxe"]
visible = false
position = Vector2(85.3333, 110)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_7nt82")

[node name="RubyLocked" type="Sprite2D" parent="Control/ColorRect/RubyPickaxe"]
visible = false
position = Vector2(85.333, 110)
scale = Vector2(0.444444, 0.444444)
texture = ExtResource("8_8lfu7")

[node name="Unlock" type="TextureRect" parent="Control/ColorRect"]
visible = false
self_modulate = Color(0.45098, 0.45098, 0.45098, 1)
layout_mode = 0
offset_top = 1242.0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("11_01pdv")
expand_mode = 1

[node name="UnlockText" type="Label" parent="Control/ColorRect/Unlock"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.129794
anchor_bottom = -0.0058997
offset_top = 383.0
offset_right = 1080.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="AbilityText" type="Label" parent="Control/ColorRect/Unlock"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.224189
anchor_bottom = -0.100295
offset_top = 152.0
offset_right = 1080.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="UnlockButton" type="Button" parent="Control/ColorRect/Unlock"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 240.0
offset_top = 513.0
offset_right = 840.0
offset_bottom = 653.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 80
text = "Unlock"

[node name="Select" type="TextureRect" parent="Control/ColorRect"]
visible = false
self_modulate = Color(0.45098, 0.45098, 0.45098, 1)
offset_top = 1242.0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("11_01pdv")
expand_mode = 1

[node name="SelectButton" type="Button" parent="Control/ColorRect/Select"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 240.0
offset_top = 513.0
offset_right = 840.0
offset_bottom = 653.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 80
text = "SELECT"

[node name="AbilityText" type="Label" parent="Control/ColorRect/Select"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.00147493
anchor_bottom = 0.122419
offset_top = 152.0
offset_right = 1080.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("3_cjt5g")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/ColorRect/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/ColorRect/SteelPickaxe" to="." method="_on_steel_pickaxe_pressed"]
[connection signal="pressed" from="Control/ColorRect/GoldenPickaxe" to="." method="_on_golden_pickaxe_pressed"]
[connection signal="pressed" from="Control/ColorRect/Unlock/UnlockButton" to="." method="_on_unlock_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/Select/SelectButton" to="." method="_on_select_button_pressed"]
